fix(post): some content could overflow

--- a/src/components/post/expando/expando.module.css
+++ b/src/components/post/expando/expando.module.css
@@ -28,6 +28,7 @@
   max-width: 60em;
   font-size: 14px;
   line-height: 20px;
+  overflow-wrap: break-word;
 }
 
 .expandoContent {
